--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <button class="btn-filtrar">Filtrar</button>
                 </div>
                 <canvas id="grafico-categorias"></canvas>
+                <button id="limpar-dados" class="btn-filtrar" style="margin-top: 16px;">Limpar dados</button>
             </div>
         </div>
         <div class="item item2">
