--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             </div>
             <div class="form-group">
 
+            <!--
               <div class="input-box">
                 <label>Tempo dedicado</label>
                 <div class="tempo">
@@ -70,10 +71,16 @@
                   </div>
                 </div>
               </div>
+            -->
+              <div class="input-box">
+                <label for="tempo">Tempo</label>
+                <input type="number" name="tempo" id="tempo">
+
+              </div>
 
               <div class="input-box">
                 <label for="data-atividade">Data</label>
-                <input type="date" id="data-atividade" name="data-atividade" required />
+                <input type="date" id="data-atividade" name="data-atividade" required/>
               </div>
               
             </div>
